@@ -9,6 +9,7 @@ either Mutagen 1.2 and pyvorbis, or Mutagen 1.3 or later.
 Quod Libet 0.22 requires Python 2.4 or later.
 
 0.22
+ * The tray icon is now an optional plugin. (#724)
  * Python 2.4 is now required.
 
 0.21 - Faith, AND the possibility of weaponized kissing??
